# femtoGPT

./: .gitignore  Cargo.toml  Fork.md  TODO.md  architecture.md  exp38.nu  exp40.nu  exp44.nu  exp46.nu  exp48.nu  exp49.nu  hyper_params.json  incremental-training.py  log.md  rs1  structure.md  train.nu  train.py
docs/commands/: chunks.txt  cluster-tokens.txt  compare.txt  count-tokens.txt  init-with.txt  init.txt  insert-layer.txt  reset-optimizer.txt  train-bpe.txt  train.txt
dummy_data/: addition_dummy.py  mask.py  simple_dummy.py  simple_dummy2.py  simple_sequence.py  simple_sequence2.py
src/: error.rs  gguf.rs  gpt.rs  infer.rs  lib.rs  log.rs  main.rs  model.rs
src/model/: info.rs  log.rs  mod.rs
src/tensor/: mod.rs
src/tokenizer/: byte.rs  bytes.rs  config.rs  count.rs  encode.rs  inner.rs  mod.rs  reserve.rs  sentencepiece.rs  simple.rs
src/tokenizer/bpe/: char_count.rs  config.rs  mod.rs
src/tokenizer/bpe/tokenizer/: encode.rs  mod.rs
