[package]
name = "femto-gpt"
version = "0.2.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
edition = "2021"
description = "Minimal Rust library for training GPT language-models"
repository = "https://github.com/keyvank/femtoGPT"
homepage = "https://github.com/keyvank/femtoGPT"
license = "MIT"


[dependencies]
bincode = "1.3.3"
chrono = "0.4.40"
ocl = { version = "0.19", optional = true }
ragit-fs = "0.3.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"

[features]
gpu = ["ocl"]
